login cookies and authentication

--- a/client/login.html
+++ b/client/login.html
@@ -24,7 +24,7 @@
         <main>
             <form class="loginForm" id="loginForm">
                 <div class="mb-3">
-                    <label for="emailInput" class="form-label">Email or Username</label>
+                    <label for="emailInput" class="form-label">Email</label>
                     <input type="email" class="form-control" id="emailInput" placeholder="Email or Username" required>
                 </div>
                 <div class="mb-3">
