--- a/client/login.html
+++ b/client/login.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
     <!-- cdn bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -12,6 +11,7 @@
     <!-- css -->
     <link rel="stylesheet" type="text/css" href="./style.css">
     <script src="./js/login.js"></script>
+    <title>Login</title>
 </head>
 
 <body>
@@ -22,7 +22,8 @@
             </nav>
         </header>
         <main>
-            <form class="loginForm" id="loginForm">
+            <h3 id="loginError">Invalid password or email</h3>
+            <form id="loginForm">
                 <div class="mb-3">
                     <label for="emailInput" class="form-label">Email</label>
                     <input type="email" class="form-control" id="emailInput" placeholder="Email or Username" required>
@@ -33,9 +34,6 @@
                 </div>
                 <button type="submit" class="btn btn-primary">Login</button>
             </form>
-            <!-- <div class="link-text">
-        <p>Already have an account? <a class="link-log">Login</a></p>
-      </div> -->
         </main>
     </div>
 </body>
