addWallet fixed cookie and redirect

--- a/client/addNewWallet.html
+++ b/client/addNewWallet.html
@@ -4,13 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="./css/addNewWallets.css">
-  <script src="js/wallet.js"></script>
+  <script src="js/addWallet.js"></script>
   <title>Add New Wallet</title>
 </head>
 <body>
   <div class="header">
-    <Button class="arrow-back">
-    </div>
     <div class="title">Add New Wallet</div>
   </div>
 
