--- a/client/child.html
+++ b/client/child.html
@@ -58,25 +58,25 @@
     </main>
     <footer class="home_nav">
         <nav>
-            <button class="selected" href="#">
+            <a class="selected" href="#">
                 <div id="home_icon"></div>
                 Home
-            </button>
-            <button href="#">
+            </a>
+            <a href="#">
                 <div id="transaction_icon"></div>
                 Transaction
-            </button>
-            <button class="plus" href="#">
+            </a>
+            <a class="plus" href="#">
                 <div>
                     <div id="plus_icon"></div>
                 </div>
-            </button>
-            <button href="#">
+            </a>
+            <a href="#">
                 <div id="budget_icon"></div>Budget
-            </button>
-            <button href="#">
+            </a>
+            <a href="#">
                 <div id="profile_icon"></div>Profile
-            </button>
+            </a>
         </nav>
     </footer>
 </body>
