--- a/client/parent.html
+++ b/client/parent.html
@@ -61,20 +61,22 @@
     </main>
     <footer class="home_nav">
         <nav>
-            <button class="selected" href="#">
-                <div id="home_icon"></div>
+            <a class="selected" href="#">
+                <i class="bi bi-house-fill"></i>
                 Home
-            </button>
-            <button href="#">
-                <div id="transaction_icon"></div>
+            </a>
+            <a href="#">
+                <i class="bi bi-arrow-left-right"></i>
                 Transaction
-            </button>
-            <button href="#">
-                <i class="bi bi-people-fill budget_icon"></i>Budget
-            </button>
-            <button href="#">
-                <div id="statistics_icon"></div>Statistics
-            </button>
+            </a>
+            <a href="wallet.html">
+                <i class="bi bi-people-fill budget_icon"></i>
+                Wallets
+            </a>
+            <a href="#">
+                <i class="bi bi-bar-chart-fill"></i>
+                Statistics
+            </a>
         </nav>
     </footer>
 </body>
