--- a/client/addChild.html
+++ b/client/addChild.html
@@ -14,10 +14,12 @@
 
 <body>
   <header class="header">
-    <a class="backButton btn" href="wallet.html">
-      <i class="bi bi-arrow-left"></i>
-    </a>
-    <h1>Add Child</h1>
+    <h1>
+      <a class="backButton btn" href="wallet.html">
+        <i class="bi bi-arrow-left"></i>
+      </a>
+      Add Child
+    </h1>
   </header>
   <form id="addChildForm">
     <div class="form-group mb-3">
