--- a/client/wallet.html
+++ b/client/wallet.html
@@ -21,21 +21,20 @@
             </a>
         </div>
         <ul class="list-group childrenList">
-            <li class="list-group-item mb-3 childItem" data-childId="1">
-                <h3>Alphie</h3>
-                <div class="input-group">
-                    <input type="number" class="form-control" placeholder="...">
-                    <span class="input-group-text">$</span>
-                    <button class="btn btn-primary">Change</button>
-                    <button class="btn btn-outline-secondary">
-                        <i class="bi bi-trash-fill"></i>
-                    </button>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+                <div>
+                    <h3>Child Name</h3>
+                    <p>Balance: $...</p>
+                </div>
+                <div>
+                    <a href="#" class="btn btn-primary btn-sm">
+                        <i class="bi bi-pencil"></i>
+                    </a>
+                    <a href="#" class="btn btn-danger btn-sm">
+                        <i class="bi bi-trash"></i>
+                    </a>
                 </div>
             </li>
-            <li class="list-group-item mb-3">A second item</li>
-            <li class="list-group-item mb-3">A third item</li>
-            <li class="list-group-item mb-3">A fourth item</li>
-            <li class="list-group-item mb-3">And a fifth one</li>
         </ul>
     </main>
     <footer class="home_nav">
