--- a/client/addChild.html
+++ b/client/addChild.html
@@ -21,21 +21,23 @@
       Add Child
     </h1>
   </header>
-  <form id="addChildForm">
-    <div class="form-group mb-3">
-      <label class="form-label" for="name">Name</label>
-      <input class="form-control" type="text" id="name" name="name" required>
-    </div>
-    <div class="form-group mb-3">
-      <label class="form-label" for="email">Email</label>
-      <input class="form-control" type="email" id="email" name="email" required>
-    </div>
-    <div class="form-group mb-3">
-      <label class="form-label" for="password">Password</label>
-      <input class="form-control" type="password" id="password" name="password" required>
-    </div>
-    <button type="submit" class="btn btn-primary">Add Child</button>
-  </form>
+  <main>
+    <form id="addChildForm">
+      <div class="form-group mb-3">
+        <label class="form-label" for="name">Name</label>
+        <input class="form-control" type="text" id="name" name="name" required>
+      </div>
+      <div class="form-group mb-3">
+        <label class="form-label" for="email">Email</label>
+        <input class="form-control" type="email" id="email" name="email" required>
+      </div>
+      <div class="form-group mb-3">
+        <label class="form-label" for="password">Password</label>
+        <input class="form-control" type="password" id="password" name="password" required>
+      </div>
+      <button type="submit" class="btn btn-primary">Add Child</button>
+    </form>
+  </main>
 </body>
 
 </html>
