--- a/client/newIncome.html
+++ b/client/newIncome.html
@@ -8,8 +8,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" type="text/css" href="./style.css">
-    <script src="js/newExpense.js"></script>
-    <title>New Expense</title>
+    <script src="js/newIncome.js"></script>
+    <title>New Income</title>
 </head>
 
 <body>
@@ -18,11 +18,11 @@
             <a class="backButton btn" href="child.html">
                 <i class="bi bi-arrow-left"></i>
             </a>
-            New Expense
+            New Income
         </h1>
     </header>
     <main>
-        <form id="newExpenseForm">
+        <form id="newIncomeForm">
             <div class="form-group mb-3">
                 <label class="form-label" for="amount">Amount</label>
                 <div class="input-group">
@@ -44,7 +44,7 @@
                 <label class="form-label" for="description">Description</label>
                 <textarea class="form-control" id="description" name="description"></textarea>
             </div>
-            <button type="submit" class="btn btn-primary">Add Expense</button>
+            <button type="submit" class="btn btn-primary">Add Income</button>
         </form>
     </main>
 </body>
