--- a/client/child.html
+++ b/client/child.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="./style.css">
     <script src="js/child.js"></script>
-    <title>Expence tracker</title>
+    <title>Expense tracker</title>
 </head>
 
 <body>
@@ -59,23 +59,35 @@
     <footer class="home_nav">
         <nav>
             <a class="selected" href="#">
-                <div id="home_icon"></div>
+                <i class="bi bi-house-fill"></i>
                 Home
             </a>
             <a href="#">
-                <div id="transaction_icon"></div>
+                <i class="bi bi-arrow-left-right"></i>
                 Transaction
             </a>
-            <a class="plus" href="#">
-                <div>
-                    <div id="plus_icon"></div>
-                </div>
-            </a>
+            <div class="plus" href="#">
+                <a tabindex="0" class="btn" role="button" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="top" data-bs-html="true" data-bs-content="
+                    <a href='newIncome.html' role='button' class='btn btn-success'>
+                        <div>
+                            <div class='income_icon'></div>
+                        </div>
+                    </a>
+                    <a href='newExpense.html' role='button' class='btn btn-danger'>
+                        <div>
+                            <div class='expense_icon'></div>
+                        </div>
+                    </a>">
+                    <i class="bi bi-plus"></i>
+                </a>
+            </div>
             <a href="#">
-                <div id="budget_icon"></div>Budget
+                <i class="bi bi-pie-chart-fill"></i>
+                Budget
             </a>
-            <a href="#">
-                <div id="profile_icon"></div>Profile
+            <a href="statisticsChild.html">
+                <i class="bi bi-bar-chart-fill"></i>
+                Statistics
             </a>
         </nav>
     </footer>
