--- a/client/newExpense.html
+++ b/client/newExpense.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" type="text/css" href="./style.css">
     <script src="js/newExpense.js"></script>
     <title>New Expense</title>
@@ -26,7 +25,7 @@
             <div class="form-group mb-3">
                 <label class="form-label" for="amount">Amount</label>
                 <div class="input-group">
-                    <span class="input-group-text" id="currency">.</span>
+                    <span class="input-group-text text-bg-primary" id="currency">.</span>
                     <input class="form-control" type="number" step="0.01" id="amount" name="amount" required>
                 </div>
             </div>
