--- a/client/newIncome.html
+++ b/client/newIncome.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" type="text/css" href="./style.css">
     <script src="js/newIncome.js"></script>
     <title>New Income</title>
@@ -33,7 +32,7 @@
             <div class="form-group mb-3">
                 <label class="form-label" for="category">Category</label>
                 <select class="form-select" id="category" name="category" required>
-                    <option selected disabled value="">Category Type</option>
+                    <option selected disabled>Category Type</option>
                 </select>
             </div>
             <div class="form-group mb-3">
