--- a/client/statisticsChild.html
+++ b/client/statisticsChild.html
@@ -61,7 +61,7 @@
     </main>
     <footer class="home_nav">
         <nav>
-            <a class="selected" href="#">
+            <a href="child.html">
                 <i class="bi bi-house-fill"></i>
                 Home
             </a>
@@ -69,11 +69,26 @@
                 <i class="bi bi-arrow-left-right"></i>
                 Transaction
             </a>
-            <a href="wallet.html">
-                <i class="bi bi-people-fill"></i>
-                Wallets
+            <div class="plus">
+                <a tabindex="0" class="btn" role="button" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="top" data-bs-html="true" data-bs-content="
+                    <a href='newIncome.html' role='button' class='btn btn-success'>
+                        <div>
+                            <div class='income_icon'></div>
+                        </div>
+                    </a>
+                    <a href='newExpense.html' role='button' class='btn btn-danger'>
+                        <div>
+                            <div class='expense_icon'></div>
+                        </div>
+                    </a>">
+                    <i class="bi bi-plus"></i>
+                </a>
+            </div>
+            <a href="#">
+                <i class="bi bi-pie-chart-fill"></i>
+                Budget
             </a>
-            <a href="statisticsParent.html">
+            <a class="selected" href="#">
                 <i class="bi bi-bar-chart-fill"></i>
                 Statistics
             </a>
