--- a/client/wallet.html
+++ b/client/wallet.html
@@ -21,17 +21,8 @@
         </div>
         <ul class="list-group childrenList">
             <li class="list-group-item d-flex justify-content-between align-items-center">
-                <div>
-                    <h3>Child Name</h3>
-                    <p>Balance: $...</p>
-                </div>
-                <div>
-                    <a href="#" class="btn btn-primary btn-sm">
-                        <i class="bi bi-pencil"></i>
-                    </a>
-                    <a href="#" class="btn btn-danger btn-sm">
-                        <i class="bi bi-trash"></i>
-                    </a>
+                <div class="spinner-border" role="status">
+                    <span class="visually-hidden">Loading...</span>
                 </div>
             </li>
         </ul>
