--- a/client/statisticsParent.html
+++ b/client/statisticsParent.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://www.gstatic.com/charts/loader.js"></script>
     <link rel="stylesheet" type="text/css" href="./style.css">
-    <script src="js/parent.js"></script>
+    <script src="js/statisticsParent.js"></script>
     <title>Expense tracker</title>
 </head>
 
@@ -15,7 +16,7 @@
         <h1>Bar Chart</h1>
     </header>
     <main class="home_main">
-
+        <div id="fullStacked"></div>
     </main>
     <footer class="home_nav">
         <nav>
