--- a/client/statisticsChild.html
+++ b/client/statisticsChild.html
@@ -6,59 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://www.gstatic.com/charts/loader.js"></script>
     <link rel="stylesheet" type="text/css" href="./style.css">
-    <script src="js/parent.js"></script>
+    <script src="js/statisticsChild.js"></script>
     <title>Expense tracker</title>
 </head>
 
 <body>
     <header class="home_header">
-        <img src="images/user_image.jpg" alt="user image">
-        <div>
-            <select name="childList" id="childList" class="form-select">
-                <option value="-1">...</option>
-            </select>
-            <select name="monthSelect" id="monthSelect" class="form-select">
-                <option value="-1">...</option>
-            </select>
-        </div>
-        <div class="notification_bell_icon"></div>
+        <h1>Bar Chart</h1>
     </header>
     <main class="home_main">
-        <div class="balance">
-            <h3>Account Balance</h3>
-            <h1 class="balance_amount">$.../$...</h1>
+        <div class="spinner-border" role="status">
+            <span class="visually-hidden">Loading...</span>
         </div>
-        <div class="income_expense">
-            <div>
-                <div>
-                    <div class="income_icon"></div>
-                </div>
-                <div>
-                    <h3>Income</h3>
-                    <h4 id="income">$...</h4>
-                </div>
-            </div>
-            <div>
-                <div>
-                    <div class="expense_icon"></div>
-                </div>
-                <div>
-                    <h3>Expense</h3>
-                    <h4 id="expense">$...</h4>
-                </div>
-            </div>
-        </div>
-        <div class="transactions">
-            <div>
-                <h3>Transactions</h3>
-            </div>
-            <ul id="transactionList">
-                <li>
-                    <p>Loading ...</p>
-                </li>
-            </ul>
-        </div>
+        <div id="fullStacked"></div>
     </main>
     <footer class="home_nav">
         <nav>
