--- a/client/statisticsChild.html
+++ b/client/statisticsChild.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://www.gstatic.com/charts/loader.js"></script>
-    <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="js/statisticsChild.js"></script>
     <title>Expense tracker</title>
 </head>
@@ -32,7 +32,7 @@
                 <i class="bi bi-arrow-left-right"></i>
                 Transaction
             </a>
-            <div class="plus">
+            <div class="plus" href="#">
                 <a tabindex="0" class="btn" role="button" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="top" data-bs-html="true" data-bs-content="
                     <a href='newIncome.html' role='button' class='btn btn-success'>
                         <div>
