--- a/client/addChild.html
+++ b/client/addChild.html
@@ -4,16 +4,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="./css/addChild.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <link rel="stylesheet" type="text/css" href="./css/style.css">
   <title>Add Child</title>
 </head>
 
-<body>
+<body class="addChild">
   <div class="header">
-    <div class="title">Add Child</div>
+    <div class="title">
+      <a class="backButton" href="wallet.html">
+        <i class="bi bi-arrow-left"></i>
+      </a>
+      Add Child
+    </div>
   </div>
   <div class="container">
-    <form id="addChildForm">
+    <form id="addChildForm" class="mb-3">
       <div class="form-group">
         <label for="name">Name</label>
         <input type="text" id="name" name="name" class="form-control" required>
