--- a/client/addNewWallet.html
+++ b/client/addNewWallet.html
@@ -4,14 +4,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="./css/addNewWallets.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <link rel="stylesheet" type="text/css" href="./css/style.css">
   <script src="js/addWallet.js"></script>
   <title>Add New Wallet</title>
 </head>
 
-<body>
+<body class="addNewWallets">
   <div class="header">
-    <div class="title">Add New Wallet</div>
+    <div class="title">
+      <a class="backButton btn" href="wallet.html">
+        <i class="bi bi-arrow-left"></i>
+      </a>
+      Add New Wallet
+    </div>
   </div>
   <div class="balance-container" style="flex-direction:row; display:flex;">
     <select id="currencySelect" style="width: 20%; display: inline;">
@@ -25,7 +32,7 @@
     </select>
     <select name="childList" id="childList" class="form-select">
     </select>
-    <button class="button">Continue</button>
+    <button class="button btn btn-primary">Continue</button>
   </div>
   <script src="./js/bankAPI.js"></script>
 </body>
